# myresume_dify

./: .env.example  .gitignore  AI简历作品集网站PRD.md  DEPLOYMENT.md  README.md  docker-compose.yml  index.html  manifest.json  portfolio-design.html  spec-api-portfolio-backend.md  spec-data-portfolio-mysql.md  vibe-coding-project-plan.html
backend/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: main.py  security.py  serializers.py
backend/app/api/: admin_auth.py  admin_media.py  admin_projects.py  admin_prompt_questions.py  admin_resumes.py  admin_site.py  chat.py  health.py  public.py  responses.py
backend/app/core/: config.py
backend/app/models/: __init__.py  portfolio.py
backend/app/services/: uploads.py
backend/scripts/: init_db.py  seed.py
backend/tests/: test_chat_stream.py  test_config.py  test_deployment_config.py  test_health.py  test_init_db.py  test_portfolio_api.py
docs/superpowers/plans/: 2026-06-29-project-detail-page.md
docs/superpowers/specs/: 2026-06-29-project-detail-page-design.md
frontend/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  routes.ts
frontend/src/components/admin/: AdminApp.tsx  AdminDashboard.tsx  AdminLogin.tsx  AdminMediaPage.tsx  AdminProjectsPage.tsx  AdminPromptQuestionsPage.tsx  AdminResumesPage.tsx  AdminSitePage.tsx  projectForm.test.ts  (+2 more)
frontend/src/services/: admin.ts  api.test.ts  chat.ts  client.ts  projects.ts  public.ts  types.ts
(+8 files in other folders)
